Atualização sobre Efeito Fotoelétrico

--- a/A Estrutura Eletrônica dos Átomos.ipynb
+++ b/A Estrutura Eletrônica dos Átomos.ipynb
@@ -161,11 +161,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemplo 1 - Qual a energia de um fóton com $\\lambda = 5.00 x 10^{4}$ nm (infravermelho) e outro com $\\lambda = 5.00 x 10^{-2}$ nm (raio X)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Energia do fóton 1:  3.978e-21 j\n",
+      "Energia do fóton 2:  3.978e-15 j\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Como foi dado o comprimento, usaremos Energia_l\n",
+    "\n",
+    "print('Energia do fóton 1: ',Energia_l(5e-5),'j') #lembrando que foi dado em nm e não em m. Aqui fizemos a \n",
+    "print('Energia do fóton 2: ',Energia_l(5e-11),'j') #conversão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemplo 2 - A energia de um fóton é de $5.87 x 10^{-20} j$. Qual o seu comprimento de onda?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Fazendo uma nova função\n",
+    "def Comprimento(E):\n",
+    "    return 6.63e-34*3e8/E"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comprimento de onda:  3388.4156729131173 nm.\n",
+      "Comprimento de onda (em m):  3.3884156729131173e-06 m\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Comprimento de onda: ', Comprimento(5.87e-20)/1e-9, 'nm.')\n",
+    "print('Comprimento de onda (em m): ', Comprimento(5.87e-20), 'm')"
+   ]
   },
   {
    "cell_type": "code",
@@ -173,6 +231,60 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Efeito Fotoelétrico\n",
+    "\n",
+    "Em 1905, Albert Einstein propôs uma solução para o Efeito Fotoelétrico (eletrons são expelidos da superfície de alguns metais quando expostos a uma luz a partir de uma frequência limite).\n",
+    "Ele sugeriu que um feixe de luz seria um feixe de partículas, os fótons.\n",
+    "Os elétrons estão aprisionados em um metal e para arrancá-los é necessário uma certa frequência suficientemente elevada. Se a frequência dos fótons for tal que $hf$ é exatamente igual à energia para arrancá-los, eles serão apenas arrancados. Se $hf$ for maior que essa energia necessária, eles serão arrancados e vão adquirir energia cinética.\n",
+    "Podemos expressar como:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "hf = K + U\n",
+    "\\end{equation}\n",
+    "\n",
+    "Em que U é a energia cinética e K a energia para arrancá-lo, lembrando que $hf$ é a energia que vimos acima. Rearranjando:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "U = hf - K\n",
+    "\\end{equation}\n",
+    "\n",
+    "Ao escrever a equação dessa forma, podemos entender melhor. Quanto mais energético o fóton (maior for  a sua frequência), maior será a energia do elétron expelido.\n",
+    "\n",
+    "O problema disso é que consideramos a luz agora não como uma onda, mas sim como uma partícula! Como essa explicação é condizente com o que se observa nos experimentos, admite-se que a luz tem as propriedas de onda e partícula! É essa a dualidade tão comentada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Energia cinética do elétron\n",
+    "\n",
+    "def U(f, K):\n",
+    "    ''' f em Hz e K em joule'''\n",
+    "    return 6.63e-34 * f - K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fonte do texto:\\\n",
+    "CHANG, Raymond. \"Química Geral, conceitos essenciais\". 4 ed. Porto Alegre: AMGH, 2010."
+   ]
   },
   {
    "cell_type": "code",
